# TestAndPlot

./: CMakeLists.txt  README.md
include/: ops_counter.hpp  simd_ops_counter.hpp  test.hpp  tsc_x86.h
src/: main.cpp
